[gd_scene load_steps=7 format=2]

[ext_resource path="res://mode-select/ModeSelect.gd" type="Script" id=1]
[ext_resource path="res://Water.tscn" type="PackedScene" id=2]
[ext_resource path="res://mode-select/m_arenat.png" type="Texture" id=3]
[ext_resource path="res://mode-select/m_arenat_selected.png" type="Texture" id=4]
[ext_resource path="res://mode-select/m_racingt.png" type="Texture" id=5]
[ext_resource path="res://mode-select/m_racingt_selected.png" type="Texture" id=6]

[node name="ModeSelect" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Water" parent="." index="0" instance=ExtResource( 2 )]

[node name="ArenaButton" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 161.0
margin_top = 264.0
margin_right = 865.0
margin_bottom = 889.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="RacingButton" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 972.0
margin_top = 276.0
margin_right = 1676.0
margin_bottom = 901.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[connection signal="pressed" from="ArenaButton" to="." method="_on_ArenaButton_pressed"]

[connection signal="pressed" from="RacingButton" to="." method="_on_RacingButton_pressed"]


